--- a/FrontEnd/Shared/NavMenu.razor
+++ b/FrontEnd/Shared/NavMenu.razor
@@ -15,8 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="loanapplications">
+                <span class="oi oi-plus" aria-hidden="true"></span> Loan Applications
             </NavLink>
         </div>
         <div class="nav-item px-3">
